--- a/BigSchool/Views/Home/Index.cshtml
+++ b/BigSchool/Views/Home/Index.cshtml
@@ -3,7 +3,6 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="row">
     <ul class="course">
         @foreach (var course in Model.UpcommingCourses)
         {
@@ -41,34 +40,33 @@
             </li>
         }
     </ul>
-</div>
 @section scripts
 {
     <script>
         $(document).ready(function () {
-            $("js-toggle-attendance").click(function (e) {
+            $(".js-toggle-attendance").click(function (e) {
                 var button = $(e.target);
                 $.post("/api/attendances", { courseId: button.attr("data-course-id") })
-                .done(function () {
-                    button
-                    .removeClass("btn-default")
-                    .addClass("btn-info")
-                    .text("Going")
-                })
-                .fail(function () {
-                    alert("Something failed");
-                });
+                    .done(function () {
+                        button
+                            .removeClass("btn-default")
+                            .addClass("btn-info")
+                            .text("Going");
+                    })
+                    .fail(function () {
+                        alert("Something failed");
+                    });
             });
-            $("js-toggle-follow").click(function (e) {
+            $(".js-toggle-follow").click(function (e) {
                 var button = $(e.target);
-                $.post("/api/followings", { followeeId: button.attr("data-course-id") })
-                .done(function () {
-                    button.text("Following");
-                })
-                .fail(function () {
-                    alert("Something failed");
-                });
+                $.post("/api/followings", { followeeId: button.attr("data-user-id") })
+                    .done(function () {
+                        button.text("Following");
+                    })
+                    .fail(function () {
+                        alert("Something failed");
+                    });
             });
         });
-    </script>   
+    </script>
 }
